updating with separate pages

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -66,6 +66,14 @@ ul.task-list li input[type="checkbox"] {
     "search-label": "Search"
   }
 }</script>
+ 
+  <style>
+  .slide-deck {
+      border: 3px solid #dee2e6;
+      width: 100%;
+  }
+  </style>
+  
 
 
 <link rel="stylesheet" href="../styles.css">
@@ -159,6 +167,11 @@ ul.task-list li input[type="checkbox"] {
 </section>
 <section id="slides" class="level2">
 <h2 class="anchored" data-anchor-id="slides">Slides</h2>
+    <p><a href="slides.html" target="_blank">View slides in full screen</a></p>
+       <div>
+      <iframe class="slide-deck" src="slides.html" height="500px"></iframe>
+    </div>
+  
 </section>
 <section id="rstudio-project" class="level2">
 <h2 class="anchored" data-anchor-id="rstudio-project">RStudio Project</h2>
